--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,4 @@
-<h1>Home</h1>
+<% content_tag :div, :style => 'text-align: center;' do %>
+  В настоящее время сайт находится в разработке и будет доступен в ближайшее время
+<% end -%>
+
