--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,9 @@
   <head>
     <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
     <title>BAU</title>
+		<%= formtastic_stylesheet_link_tag %>
     <%= stylesheet_link_tag 'application' %>
+
   </head>
   <body class="<%= yield :body_class %>">
 		<%= admin_top_menu %>
