--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,7 @@
     <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
     <title>BAU</title>
 		<%= formtastic_stylesheet_link_tag %>
+		<%= stylesheet_link_tag 'scaffold' %>
     <%= stylesheet_link_tag 'application' %>
 
   </head>
