--- a/public/stylesheets/scaffold.css
+++ b/public/stylesheets/scaffold.css
@@ -49,6 +49,6 @@ a:hover { color: #fff; background-color:#000; }
 
 #errorExplanation ul li {
   font-size: 12px;
-  list-style: square;
+  list-style: none;
 }
 
