--- a/app/views/galleries/_content.html.erb
+++ b/app/views/galleries/_content.html.erb
@@ -22,8 +22,15 @@
 		
 		<% content_tag :div do %>
 			<% photos = @gallery ? @gallery.photos : @photos %>
-			<% photos.each do |photo| %>
-				<%= link_to image_tag(photo.avatar.url(:medium)), "#" %>
+			<% single_line_container do %>
+				<% photos.each do |photo| %>
+					<% content_tag :div do %>
+						<%= link_to image_tag(photo.avatar.url(:medium)), "#", :class => 'gallery_photo' %>
+						<% for_admin do %>
+							<%= link_to image_tag('delete.png'), gallery_photo_path(@gallery, photo), :confirm => 'Удалить фотограйию?', :method => :delete %>
+						<% end -%>
+					<% end -%>
+				<% end -%>
 			<% end -%>
 		<% end -%>
 	<% end -%>
