--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,6 +25,7 @@
       &copy; 2010 BAUkraine
     <% end %>
 
+    <%= render "layouts/include_all_jquery" %>
     <%= javascript_include_tag "application.js"%>
   </body>
 </html>
