--- a/app/views/layouts/_include_all_jquery.html.erb
+++ b/app/views/layouts/_include_all_jquery.html.erb
@@ -1,2 +1,2 @@
-<%= javascript_include_tag  "jquery.js", "jquery-ui.js", "jrails.js",
+<%= javascript_include_tag  "jquery.js", "jquery-ui.js", "jrails.js", "jquery.jqModal.js",
   :cache => "all_jquery" %>
