--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
     <title>BAU</title>
 		<%= formtastic_stylesheet_link_tag %>
 		<%= stylesheet_link_tag 'scaffold' %>
+		<%= stylesheet_link_tag 'jqModal' %>
     <%= stylesheet_link_tag 'application' %>
 
   </head>
