--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,7 @@
 		<%= formtastic_stylesheet_link_tag %>
 		<%= stylesheet_link_tag 'scaffold' %>
 		<%= stylesheet_link_tag 'jqModal' %>
+		<%= stylesheet_link_tag 'jquery.ad-gallery' %>
     <%= stylesheet_link_tag 'application' %>
 
   </head>
