--- a/app/views/kits/_content.html.erb
+++ b/app/views/kits/_content.html.erb
@@ -15,8 +15,31 @@
 	<% end -%>
 
 	<% content_tag :div, :class => 'gallery_content' do %>
+		<% for_admin do %>
+			<%= link_to 'Add Product', new_kit_product_path(@kit) if @kit %>
+		<% end -%>
+		
+		<% content_tag :div do %>
+			<% @show_products = @kit ? @kit.products : @products %>
+			<% single_line_container do %>
+				<% @show_products.each do |product| %>
+					<% content_tag :div do %>
+						<%= image_tag product.avatar.url(:medium), :class => 'gallery_photo' %>
+						<%= content_tag :div, product.name %>
+						<%= content_tag :div, product.description %>
+						<%= content_tag :div, product.price %>
+						<% for_admin do %>
+							<%= link_to image_tag('pencil.png'), edit_kit_product_path(product.kit, product)%>
+							<%= link_to image_tag('delete.png'), kit_product_path(product.kit, product), :confirm => 'Удалить продукт?', :method => :delete %>
+						<% end -%>
+					<% end -%>
+				<% end -%>
+			<% end -%>
+		<% end -%>
+		
 	<% end -%>
-
+		
+	
 
 <% end -%>
 
