--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,26 @@
-Главная
+<%= content_for :body_class, "home" %>
+<% content_for :top_info do %>
+	<% content_tag :div, :class => 'phones' do %>
+		<% content_tag :div do %> 
+			Телефон для справок: <%= content_tag :span, "(066) 66-11-980, (062) 385-10-28" %> 
+		<% end -%>
+		<%= content_tag :div, "Звоните нам с 9.00. до 18.00" %> 
+	<% end -%>
+	<%= image_tag "men_with_case.png", :class => 'men_with_case_img' %>
+<% end -%>
+
+<% content_tag :div do %>
+	"АКАДЕМИЯ ТЕЛОХРАНИТЕЛЕЙ УКРАИНЫ" создана в 2010 году с целью проведения  обучения, повышения квалификации, тренингов, семинаров  - с  сотрудниками
+	 личной охраны, инкассаторами,  военнослужащими специальных подразделений МО, МВД, Службы безопасности  Украины. 
+	<% end -%>
+
+	<% content_tag :div do %>
+	"АКАДЕМИЯ ТЕЛОХРАНИТЕЛЕЙ УКРАИНЫ"     является      официальным учебным центром   «НАЦИОНАЛЬНОЙ ПРОФЕССИОНАЛЬНОЙ ЛИГИ ТЕЛОХРАНИТЕЛЕЙ УКРАИНЫ» 
+	(NPBL Ukraine).
+	<% end -%>
+	
+<% content_tag :p do %>
+	Инструктора Академии имеют богатый опыт в области обеспечения личной безопасности, проведении специальных операций в городских условиях, в условиях
+	 горно-лесистой местности,  приобретенный за время прохождения службы в антитеррористических подразделениях СБУ, подразделениях специальной разведки
+	  МО Украины.
+<% end -%>
