--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -11,14 +11,24 @@ body {
   font-size: 16px;
 	color: #000;
   padding: 0 10px;
-	width: 1024px;
+	width: 1240px;
 	margin: 0 auto;
+/*	border: 1px solid red;*/
 }
 
 
 img {
   border: none;
 }
+
+.content{
+	margin: 20px 0 0 30px;
+}
+
+.left_hi{
+	margin-top: 20px;
+}
+/******************************************************* TOP MENU ************************************************/
 
 .top_menu{
 	margin: 50px 0 20px 0;
@@ -52,15 +62,17 @@ img {
 	color: #FFF;
 	font-weight: bold;
 	font-size: 32px;
-	padding: 3px;
+	padding: 0 6px 6px;
 	width: 198px;
 	display: block;
+	margin-left: -7px;
 }
 
 
-.basement{
-  text-align: center;
-  padding-top: 20px;
+/******************************************************TOP INFO*****************************************************/
+
+.top_info{
+	width: 707px;
 }
 
 .success_note{
@@ -81,12 +93,66 @@ img {
   float: left;
 }
 
-.top_menu{
-	
+.right_float > * {
+  float: right;
 }
 
 .admin_top_menu{
 	background-color: yellow;
+}
+
+.phones {
+	margin: 150px 10px 0 30px;
+	font-family: Century Gothic;
+	font-size: 20px;
+}
+
+.phones span {
+	font-size: 22px;
+	font-weight: bold;
+}
+
+/*****************************************BASEMENT************************************************/
+.basement{
+  text-align: center;
+  padding-top: 20px;
+}
+
+.basement .line{
+	background-color: #FDED01;
+	height: 43px;
+	font-family: Century Gothic;
+	font-weight: bold;
+	color: #FFF;
+	font-size: 36px;
+	line-height: 40px;
+}
+
+/******************************************************* HOME ************************************************/
+
+.home .top_info{
+	position: relative;
+}
+
+.home .men_with_case_img{
+	width: 143px;
+	height: 665px;
+	position: absolute;
+	right: 0;
+	top: 0;
+}
+
+.home .content{
+	width: 900px;
+}
+
+.home .content div,
+.home .content p{
+	text-indent: 20px;
+} 
+
+.home .basement{
+	margin-top: 30px;
 }
 
 .login_form{
