--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -13,6 +13,7 @@ body {
   padding: 0 10px;
 	width: 1240px;
 	margin: 0 auto;
+	padding-bottom: 30px;
 /*	border: 1px solid red;*/
 }
 
@@ -22,7 +23,7 @@ img {
 }
 
 .content{
-	margin: 20px 0 0 30px;
+	margin: 20px 0 0 50px;
 }
 
 .left_hi{
@@ -126,6 +127,37 @@ img {
 	color: #FFF;
 	font-size: 36px;
 	line-height: 40px;
+}
+
+.basement .bottom_menu{
+	margin: 10px 0;
+	font-size: 14px;
+}
+
+.basement .bottom_menu a{
+	padding-right: 30px;
+	font-family: Century Gothic;
+	text-decoration: none;
+	color: #000;
+}
+
+.basement .contacts{
+	margin: 0 auto;
+	width: 600px;
+	padding-left: 314px;
+	font-family: Century Gothic;
+	font-size: 14px;
+}
+
+.basement .contacts .address{
+	text-align: right;
+	padding-right: 10px;
+}
+
+.basement .contacts .phone_email{
+	text-align: left;
+	padding-left: 10px;
+	border-left: 1px solid black;
 }
 
 /******************************************************* HOME ************************************************/
