--- a/app/views/kits/_content.html.erb
+++ b/app/views/kits/_content.html.erb
@@ -1,3 +1,10 @@
+<%= content_for :body_class, " kit_content " %>
+<% content_for :top_info do %>
+	<%= render :partial => '/layouts/phones' %>
+	<%= image_tag "gun_men.png", :class => 'gun_men' %>
+<% end -%>
+
+
 <% single_line_container do %>
 
 	<% content_tag :div do %>
