--- a/app/views/kits/_content.html.erb
+++ b/app/views/kits/_content.html.erb
@@ -4,15 +4,16 @@
 	<%= image_tag "gun_men.png", :class => 'gun_men' %>
 <% end -%>
 
+<%= content_for :left_hi, 'guns_to_war.png' %>
 
 <% single_line_container do %>
 
-	<% content_tag :div do %>
+	<% content_tag :div, :class => 'left_menu' do %>
 		<%= link_to 'New kit', new_kit_path if user_signed_in? %>
 
 		<% @kits.each do |kit| %>
-			<% content_tag :div do %>
-		    <%= link_to_unless @kit == kit, h(kit.name), kit %>
+			<% content_tag :div, :class => 'item' do %>
+		    <%=  link_to_unless(@kit == kit, h(kit.name), kit){"- #{h(kit.name)}"} %>
 				<% for_admin do %>
 			    <%= link_to image_tag('pencil.png'), edit_kit_path(kit) %>
 			    <%= link_to image_tag('delete.png'), kit, :confirm => 'Удалить снаряжение со всеми товарами?', :method => :delete %> 
