--- a/app/views/galleries/show.html.erb
+++ b/app/views/galleries/show.html.erb
@@ -1,1 +1,46 @@
+
+<% content_for :gallery_content do %>
+
+	<% for_admin do %>
+		<%= link_to 'Add Photo', new_gallery_photo_path(@gallery) if @gallery %>
+	<% end -%>
+
+
+	<% content_tag :div do %>
+		<% single_line_container do %>
+			<% @photos.each do |photo| %>
+				<% content_tag :div do %>
+					<%= link_to image_tag(photo.avatar.url(:medium)), "#", :class => 'gallery_photo' %>
+					<%= link_to 'Увеличить', '#', :class => 'jqModal start_gallery', :photo_id => photo.id %>
+					<% for_admin do %>
+						<%= link_to image_tag('delete.png'), gallery_photo_path(photo.gallery, photo), :confirm => 'Удалить фотограйию?', :method => :delete %>
+					<% end -%>
+				<% end -%>
+			<% end -%>
+		<% end -%>
+	<% end -%>
+
+<% end -%>
+
+<% content_tag :div, :class => "jqmWindow", :id => "show_photo_dialog" do %>
+	<div class="ad-gallery">
+	  <div class="ad-image-wrapper">
+	  </div>
+	  <div class="ad-controls">
+	  </div>
+	  <div class="ad-nav">
+	    <div class="ad-thumbs">
+	      <ul class="ad-thumb-list">
+					<% @photos.each do |photo| %>
+		        <li>
+	            <%= link_to image_tag(photo.avatar.url(:thumb)), photo.avatar.url(:big), :id => "photo_#{photo.id}" %>
+		        </li>
+					<% end -%>
+	      </ul>
+	    </div>
+	  </div>
+	</div>
+<% end -%>
+
+
 <%= render :partial => 'content' %>
