--- a/app/views/galleries/show.html.erb
+++ b/app/views/galleries/show.html.erb
@@ -34,7 +34,7 @@
 	      <ul class="ad-thumb-list">
 					<% @photos.each do |photo| %>
 		        <li>
-	            <%= link_to image_tag(photo.avatar.url(:thumb)), photo.avatar.url(:big), :id => "photo_#{photo.id}" %>
+	            <%= link_to image_tag(photo.avatar.url(:medium)), photo.avatar.url(:big), :id => "photo_#{photo.id}" %>
 		        </li>
 					<% end -%>
 	      </ul>
