Designed js gallery

--- a/app/views/galleries/show.html.erb
+++ b/app/views/galleries/show.html.erb
@@ -24,6 +24,7 @@
 <% end -%>
 
 <% content_tag :div, :class => "jqmWindow", :id => "show_photo_dialog" do %>
+	<%= link_to  'Закрыть', "#", :class => 'close_dialog' %>
 	<div class="ad-gallery">
 	  <div class="ad-image-wrapper">
 	  </div>
