--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,12 +43,12 @@
 			<%= content_tag :div, bottom_menu, :class => 'bottom_menu' %>
 			<% single_line_container :class => 'contacts' do %>
 				<% content_tag :div, :class => 'address' do %>
-					<%= content_tag :div, '83102, г. Донецк' %>
-					<%= content_tag :div, 'ул. Стадионная, 1 "О"' %>
+					<%= content_tag :div, '83102, г. Донецк, ул. Стадионная, 1 "О"' %>
+					<%= content_tag :div, 'e-mail: BAUkraine@mail.ru' %>
 				<% end -%>
 				<% content_tag :div, :class => 'phone_email' do %>
-					<%= content_tag :div, 'тел: (066) 66-11-980, тел/факс: (062) 385-10-28' %>
-					<%= content_tag :div, 'e-mail: BAUkraine@mail.ru' %>
+					<%= content_tag :div, 'тел: (066) 66-11-980' %>
+					<%= content_tag :div, 'тел/факс: (062) 385-10-28' %>
 				<% end -%>
 			<% end -%>
     <% end %>
