--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -347,6 +347,15 @@ a{
 	position: absolute;
 }
 
+/***************************************SERVICE**********************************************/
+
+.service ul li {
+	margin-left: 20px;
+	list-style: none;
+}
+
 .login_form{
 	width: 500px;
 }
+
+
