Added dress png

--- a/app/views/education/index.html.erb
+++ b/app/views/education/index.html.erb
@@ -4,6 +4,8 @@
 	<%= image_tag "men_with_guns.png", :class => 'men_with_guns_img' %>
 <% end -%>
 
+<%= content_for :left_hi, 'dress.png' %>
+
 <div class='legend'>
 	Подготовка специалистов в области личной охраны по различным программам;
 </div>
@@ -11,16 +13,6 @@
 <div class='title'>
 В России деятельность частных охранников, к которым относятся и лица, оказывающие услуги по личной охране (телохранители), регулируется Законами РФ. В России деятельность частных охранников, к которым относятся и лица, оказывающие услуги по личной охране (телохранители), регулируется Законами РФ. В России деятельность частных охранников, к которым относятся и лица, оказывающие услуги по личной охране (телохранители), регулируется Законами РФ.В России деятельность частных охранников, к которым относятся и лица, оказывающие услуги по личной охране (телохранители), регулируется Законами РФ. В России деятельность частных охранников, к которым относятся и лица, оказывающие услуги по личной охране (телохранители), регулируется Законами РФ.
 </div>
-
-
-
-
-
-
-
-
-
-
 
 <ul class='list'>
 	<% list = [
