--- a/app/views/service/index.html.erb
+++ b/app/views/service/index.html.erb
@@ -1,12 +1,25 @@
 <%= content_for :body_class, ' service ' %>
+
+<% content_for :top_info do %>
+	<%= render :partial => '/layouts/phones' %>
+	<%= image_tag "men_and_door.png", :class => 'men_and_door_img' %>
+<% end -%>
+
+<%= content_for :left_hi, 'go_ahead.png' %>
+
+
 <%= content_tag :div, '"АКАДЕМИЯ ТЕЛОХРАНИТЕЛЕЙ УКРАИНЫ" предоставляет следующие виды охранных услуг:' %>
 <ul>                                                               
-	<li>- личная охрана (телохранители);                             </li>
-	<li>- охрана объектов государственной и частной собственности;   </li>
-	<li>- охрана и сопровождение ценных грузов;                      </li>
-	<li>- предварительная проверка объекта;                          </li>
-	<li>- создание службы безопасности предприятия;                  </li>
-	<li>- проверка работы службы безопасности предприятия;           </li>
-	<li>- технические средства охраны;                               </li>
-	<li>- техническая защита информации.	                           </li>
+
+	<li>Обеспечение персональной безопасности;</li>
+	<li>Охрана стационарных объектов;</li>
+	<li>Сопровождение грузов и материальных ценностей;</li>
+	<li>Морская безопасность: обеспечение персональной безопасности клиентов на водных акваториях, охрана и сопровождение морских грузов и суден, обследование дна водоемов и элементов подводных частей технических сооружений (частных причалов, частных пляжей, частных судов, поиск и подъем затонувших предметов и объектов);</li>
+	<li>Охрана объектов группой быстрого реагирования;</li>
+	<li>Охрана поисково-патрульными группами  удаленных объектов, объектов нефте-газовой отрасли, защита нефтепроводов от врезок и профилактика от несанкционированного скачивания нефти, организация постов, буферных зон безопасности, мониторинг местности вокруг объекта, оперативно-охранные мероприятия; </li>
+	<li>Техническая защита охраняемых объектов;</li>
+	<li>Оперативно-технический осмотр помещений, автомобилей и т. д. на предмет выявления технических средств съема информации;</li>
+	<li>Защита информации;</li>
+	<li>Информационно-аналитическая безопасность. </li>
+	
 </ul>
