--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,7 @@
 <%= content_for :body_class, "home" %>
 <% content_for :top_info do %>
 	<%= render :partial => '/layouts/phones' %>
-	<%= image_tag "men_with_case.png", :class => 'men_with_case_img' %>
+	<%= image_tag "men_with_case.png" %>
 <% end -%>
 
 <% content_tag :div do %>
