--- a/app/views/kits/_content.html.erb
+++ b/app/views/kits/_content.html.erb
@@ -1,7 +1,7 @@
 <%= content_for :body_class, " kit_content " %>
 <% content_for :top_info do %>
 	<%= render :partial => '/layouts/phones' %>
-	<%= image_tag "gun_men.png", :class => 'gun_men' %>
+	<%= image_tag "gun_men.png" %>
 <% end -%>
 
 <%= content_for :left_hi, 'guns_to_war.png' %>
