--- a/app/views/service/index.html.erb
+++ b/app/views/service/index.html.erb
@@ -2,7 +2,7 @@
 
 <% content_for :top_info do %>
 	<%= render :partial => '/layouts/phones' %>
-	<%= image_tag "men_and_door.png", :class => 'men_and_door_img' %>
+	<%= image_tag "men_and_door.png" %>
 <% end -%>
 
 <%= content_for :left_hi, 'go_ahead.png' %>
