--- a/app/views/education/index.html.erb
+++ b/app/views/education/index.html.erb
@@ -1,7 +1,7 @@
 <%= content_for :body_class, " education " %>
 <% content_for :top_info do %>
 	<%= render :partial => '/layouts/phones' %>
-	<%= image_tag "men_with_guns_2.png", :class => 'men_with_guns_img' %>
+	<%= image_tag "men_with_guns_2.png" %>
 <% end -%>
 
 <%= content_for :left_hi, 'dress.png' %>
