--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -47,7 +47,7 @@ a{
 
 .pagination .current{
 	padding: 3px;
-	background-color:#F9F919;
+	background-color:#F9ED01;
 	font-size: 20px;
 	color: #FFF;
 	font-width: bold;
@@ -93,7 +93,7 @@ a{
 }
 
 .top_menu .current_page{
-	background-color: #F3F019;
+	background-color: #F9ED01;
 	color: #FFF;
 	font-weight: bold;
 	font-size: 32px;
@@ -284,7 +284,7 @@ a{
 
 .kit_content .products .item .price{
 	padding: 5px;
-	background-color: #F9F919;
+	background-color: #F9ED01;
 	font-size: 16px;
 }
 
