--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -9,10 +9,10 @@
 
 <% data = 
 	[
-		{'Адрес:'               => '85300, г. Донецк, ул. Стадионная, 15 а'},
-		{'Электронная почта:'   => 'e-mail: BAUkraine.gmail.com'},
-		{'Телефон:'             => '(062) 400-00-00'},
-		{'Телефон/Факс:'        => '(062) 410-20-00'}
+		{'Адрес:'               => '85300, г. Донецк, ул. Стадионная, 1 "O"'},
+		{'Электронная почта:'   => 'e-mail: BAUkraine@gmail.com'},
+		{'Телефон:'             => '(062) 66-11-980'},
+		{'Факс:'                => '(062) 385-10-28'}
 	]
 %>
 
