--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -10,7 +10,7 @@
 <% data = 
 	[
 		{'Адрес:'               => '85300, г. Донецк, ул. Стадионная, 1 "O"'},
-		{'Электронная почта:'   => 'e-mail: BAUkraine@gmail.com'},
+		{'Электронная почта:'   => 'e-mail: BAUkraine@mail.ru'},
 		{'Телефон:'             => '(062) 66-11-980'},
 		{'Факс:'                => '(062) 385-10-28'}
 	]
