--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
     <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
+    <meta name='yandex-verification' content='40ef5b039d394890' />
     <title>BAU</title>
 		<%= formtastic_stylesheet_link_tag %>
 		<%= stylesheet_link_tag 'scaffold' %>
