--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -56,5 +56,23 @@
 
     <%= render "layouts/include_all_jquery" %>
     <%= javascript_include_tag "application.js"%>
+    
+    <!-- Yandex.Metrika counter -->
+    <div style="display:none;"><script type="text/javascript">
+    (function(w, c) {
+        (w[c] = w[c] || []).push(function() {
+            try {
+                w.yaCounter2665669 = new Ya.Metrika(2665669);
+                 yaCounter2665669.clickmap(true);
+                 yaCounter2665669.trackLinks(true);
+
+            } catch(e) {}
+        });
+    })(window, 'yandex_metrika_callbacks');
+    </script></div>
+    <script src="//mc.yandex.ru/metrika/watch.js" type="text/javascript" defer="defer"></script>
+    <noscript><div style="position:absolute"><img src="//mc.yandex.ru/watch/2665669" alt="" /></div></noscript>
+    <!-- /Yandex.Metrika counter -->
+    
   </body>
 </html>
